--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -17,5 +17,5 @@ jobs:
       env:
         GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
       run: |
-        git remote add gitlab https://mqwele@gitlab.com/mqwele/consul-hashicorp.git
+        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/mqwele/consul-hashicorp.git
         git push --mirror gitlab
