--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -3,34 +3,32 @@ name: Sync to GitLab
 on:
   push:
     branches:
-      - main  # or the branch you want to sync
+      - main  # Adjust this if you are using a different branch
 
 jobs:
   sync:
     runs-on: ubuntu-latest
-
     steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
-      with:
-        fetch-depth: 0  # This ensures a full clone is performed
+      - name: Checkout repository
+        uses: actions/checkout@v4  # Automatically use the latest version
+        with:
+          fetch-depth: 0  # Perform a full clone
 
-    - name: Set up Git configuration
-      run: |
-        git config --global user.name "github-actions[bot]"
-        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+      - name: Configure Git
+        run: |
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-    - name: Fetch changes from GitLab
-      run: |
-        git remote add gitlab https://oauth2:${GITLAB_TOKEN}@gitlab.com/mqwele/consul-hashicorp.git
-        git fetch gitlab
+      - name: Pull from GitLab
+        env:
+          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+        run: |
+          git remote add gitlab https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.com/mqwele/consul-hashicorp.git
+          git fetch gitlab
+          git merge -X ours gitlab/main || echo "Merge conflicts resolved using ours strategy"
 
-    - name: Pull changes from GitLab
-      run: |
-        git pull gitlab main
-
-    - name: Push changes to GitLab
-      env:
-        GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
-      run: |
-        git push gitlab main:main
+      - name: Push to GitLab
+        env:
+          GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
+        run: |
+          git push gitlab main
