--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -19,13 +19,13 @@ jobs:
           git config --global user.name "github-actions[bot]"
           git config --global user.email "github-actions[bot]@users.noreply.github.com"
 
-      - name: Pull from GitLab
+      - name: Pull from GitLab and Reconcile Differences
         env:
           GITLAB_TOKEN: ${{ secrets.GITLAB_TOKEN }}
         run: |
           git remote add gitlab https://oauth2:${{ secrets.GITLAB_TOKEN }}@gitlab.com/mqwele/consul-hashicorp.git
           git fetch gitlab
-          git pull gitlab main
+          git pull --no-rebase  # Choose the appropriate option here based on your preference
 
       - name: Push to GitLab
         env:
