--- a/.github/workflows/sync-to-gitlab.yml
+++ b/.github/workflows/sync-to-gitlab.yml
@@ -4,13 +4,16 @@ on:
   push:
     branches:
       - main  # Adjust this if you are using a different branch
-  git config --global user.email "nahmastaa@outlook.fr"
-  git config --global user.name "mqwele"
 
 jobs:
   sync:
     runs-on: ubuntu-latest
     steps:
+      - name: Set Git Identity
+        run: |
+          git config --global user.email "nahmastaa@outlook.fr"
+          git config --global user.name "mqwele"
+
       - name: Checkout repository
         uses: actions/checkout@v2  # Use the latest version of checkout action
         with:
